<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.10">
  <POU Name="AUTO" Id="{97a26fb9-68ff-461f-aa24-f8d33d7f3452}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM AUTO
VAR
	//Stations
	Controller : RunUnitController(argParent:= Controller, argSlotBase:= 0, argSlotLast:= 0);
	LifterCelluarA : ARRAY[1..3] OF RunLifterCelluar(argParent:= ADR(lifterCelluarA), 
									argSlotBase:= ADR(GVL.MATERIAL_SLOTS[1]), 
									argSlotLast:= ADR(GVL.MATERIAL_SLOTS[2]),
									argAxis:= ADR(GVL.axisControls[1]),
									argCylinder:=ADR(GVL.cylinderControls[1]),
									argHit:=ADR(GVL.commandBlocks[16]),
									argRelease:=ADR(GVL.commandBlocks[17]),
									argWorking:=ADR(GVL.commandBlocks[18]),		
									argObstacleSensor:= ADR(simuObstacleSensor),
									argReachSensor:= ADR(simuReachSensor));
	ConveyorMaster : RunUnitIndexerMasterCelluarA(argParent:= ADR(masterCelluarA), 
												argSlotBase:= ADR(GVL.MATERIAL_SLOTS[1]), 
												argSlotLast:= ADR(GVL.MATERIAL_SLOTS[3]),
												argAxis:=ADR(GVL.axisControls[1]),
												argUpstream:=ADR(masterProxy),		
												argCommandFast:=ADR(GVL.commandBlocks[1]),
												argCommandSlow:=ADR(GVL.commandBlocks[2]),
												argCommandTriggerRaise:=ADR(GVL.commandBlocks[3]),
												argCommandCheckRaise:=ADR(GVL.commandBlocks[4]));
	//
	nCounter : INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF NOT GVL.bObjectsLinked THEN
	//all station initialize (build relationship) , machine spcific configuration
	FOR nCounter := 1 TO 3 BY 1 DO
		LifterCelluarA[nCounter].FB_init(
		bInitRetains:= FALSE, 
		bInCopyCode:= FALSE, 
		argParent:= ADR(Controller), 
		argSlotBase:= ADR(gvl.materialSlots[0+nCounter]), 
		argSlotLast:= ADR(gvl.materialSlots[0+nCounter]), 
		argAxis:= ADR(gvl.axisControls[1+nCounter]), 
		argCylinder:= ADR(gvl.cylinderControls[0+nCounter]), 
		argHit:= ADR(gvl.commandBlocks[7+(nCounter-1)*4]+1), 
		argRelease:=ADR(gvl.commandBlocks[7+(nCounter-1)*4]+2) , 
		argWorking:=ADR(gvl.commandBlocks[7+(nCounter-1)*4]+3) , 
		argObstacleSensor:=ADR(gvl.signalControls[nCounter+0].debouncedOn) , 
		argReachSensor:= ADR(gvl.signalControls[nCounter+3].debouncedOn));
	END_FOR
	gvl.bObjectsLinked := true; //self-locked
END_IF

Controller();//execute

]]></ST>
    </Implementation>
    <LineIds Name="AUTO">
      <LineId Id="5" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="130" Count="0" />
      <LineId Id="134" Count="0" />
      <LineId Id="146" Count="0" />
      <LineId Id="136" Count="9" />
      <LineId Id="132" Count="1" />
      <LineId Id="131" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="82" Count="0" />
      <LineId Id="72" Count="0" />
      <LineId Id="78" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>